Merge new layout