@@ -1,18 +1,15 @@
 package sd_04.datn_fstore.api;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.server.ResponseStatusException;
 import sd_04.datn_fstore.model.PhieuGiamGia;
 import sd_04.datn_fstore.service.PhieuGiamgiaService;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -22,99 +19,86 @@ import java.util.Optional;
 @RequiredArgsConstructor
 @CrossOrigin(origins = "*")
 public class PhieuGiamGiaApi {
-    @Autowired
-    private PhieuGiamgiaService phieuGiamGiaService;
 
+    private final PhieuGiamgiaService phieuGiamGiaService;
+
+    // 1. TÌM KIẾM & PHÂN TRANG
     @GetMapping
-    public Page<PhieuGiamGia> getPromotions(
-            // SỬA: Bỏ required=true (mặc định) để cho phép trangThai là NULL
+    public ResponseEntity<Page<PhieuGiamGia>> getPromotions(
             @RequestParam(name = "trangThai", required = false) Integer trangThai,
             @RequestParam(name = "keyword", required = false) Optional<String> keyword,
-            @RequestParam(name = "ngayBatDau", required = false) @DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ss") LocalDateTime ngayBatDau,
-            @RequestParam(name = "ngayKetThuc", required = false) @DateTimeFormat(pattern = "yyyy-MM-dd'T'HH:mm:ss") LocalDateTime ngayKetThuc,
+            @RequestParam(name = "ngayBatDau", required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) LocalDateTime ngayBatDau,
+            @RequestParam(name = "ngayKetThuc", required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) LocalDateTime ngayKetThuc,
             @RequestParam(name = "page", defaultValue = "0") int page,
             @RequestParam(name = "size", defaultValue = "5") int size,
             @RequestParam(name = "sortField", defaultValue = "id") String sortField,
-            @RequestParam(name = "sortDir", defaultValue = "asc") String sortDir) {
+            @RequestParam(name = "sortDir", defaultValue = "desc") String sortDir) {
 
         String searchKeyword = keyword.orElse(null);
-
-        // Vẫn truyền trangThai (có thể là NULL) vào service
-        return phieuGiamGiaService.searchAndFilter(
-                trangThai, // <--- trangThai có thể là NULL
-                searchKeyword,
-                ngayBatDau,
-                ngayKetThuc,
-                page,
-                size,
-                sortField,
-                sortDir);
+        Page<PhieuGiamGia> result = phieuGiamGiaService.searchAndFilter(
+                trangThai, searchKeyword, ngayBatDau, ngayKetThuc, page, size, sortField, sortDir);
+        return ResponseEntity.ok(result);
     }
 
+    // 2. THÊM MỚI
     @PostMapping
-    public ResponseEntity<PhieuGiamGia> createPromotion(@RequestBody PhieuGiamGia phieuGiamGia) {
+    public ResponseEntity<?> createPromotion(@RequestBody PhieuGiamGia phieuGiamGia) {
         try {
             PhieuGiamGia savedPgg = phieuGiamGiaService.saveWithStatusCheck(phieuGiamGia);
             return new ResponseEntity<>(savedPgg, HttpStatus.CREATED);
         } catch (IllegalArgumentException e) {
-            // Xử lý lỗi validation hoặc trùng lặp mã
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, e.getMessage());
+            return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
+        } catch (Exception e) {
+            return ResponseEntity.internalServerError().body(Map.of("message", "Lỗi hệ thống: " + e.getMessage()));
         }
-
     }
 
-    // =========================================================
-    // THÊM: API CẬP NHẬT VÀ XÓA
-    // =========================================================
-
-    // THÊM: GET BY ID (Cần cho Frontend lấy dữ liệu để hiển thị trên form sửa)
+    // 3. LẤY CHI TIẾT
     @GetMapping("/{id}")
     public ResponseEntity<PhieuGiamGia> getById(@PathVariable Integer id) {
-        Optional<PhieuGiamGia> phieu = phieuGiamGiaService.findById(id);
-        return phieu.map(ResponseEntity::ok)
-                .orElseGet(() -> ResponseEntity.notFound().build());
+        return phieuGiamGiaService.findById(id)
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
     }
 
-    // THÊM: PUT (Cập nhật)
+    // 4. CẬP NHẬT
     @PutMapping("/{id}")
-    public ResponseEntity<PhieuGiamGia> updatePromotion(@PathVariable Integer id, @RequestBody PhieuGiamGia phieuGiamGia) {
+    public ResponseEntity<?> updatePromotion(@PathVariable Integer id, @RequestBody PhieuGiamGia phieuGiamGia) {
         try {
             PhieuGiamGia updatedPhieu = phieuGiamGiaService.update(id, phieuGiamGia);
             return ResponseEntity.ok(updatedPhieu);
         } catch (IllegalArgumentException e) {
-            // Bắt lỗi validation (như trùng lặp mã)
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, e.getMessage());
+            return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
         } catch (RuntimeException e) {
-            // Bắt lỗi Runtime chung (dùng cho lỗi "Không tìm thấy" ném từ Service)
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, e.getMessage());
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("message", e.getMessage()));
         }
     }
 
-
-    // THÊM: DELETE (Xóa mềm - Chuyển trạng thái thành 2)
-    @DeleteMapping("/{id}")
-    public ResponseEntity<PhieuGiamGia> softDeletePromotion(@PathVariable Integer id) {
+    // 5. ĐẢO TRẠNG THÁI (Active <-> Inactive) - MỚI
+    @PatchMapping("/{id}/toggle-status")
+    public ResponseEntity<?> toggleStatus(@PathVariable Integer id) {
         try {
-            PhieuGiamGia deletedPhieu = phieuGiamGiaService.softDelete(id);
-            return ResponseEntity.ok(deletedPhieu);
+            phieuGiamGiaService.toggleStatus(id); // Cần đảm bảo hàm này có trong Service
+            return ResponseEntity.ok(Map.of("message", "Cập nhật trạng thái thành công"));
         } catch (RuntimeException e) {
-            // Lỗi không tìm thấy ID
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, e.getMessage());
+            return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
         }
     }
 
+    // 6. ĐỒNG BỘ TRẠNG THÁI (Quét tự động)
     @PostMapping("/sync-status")
-    public ResponseEntity<Map<String, Integer>> syncStatus() {
-        int count = phieuGiamGiaService.syncPromotionStatus();
-
-        // Trả về số lượng bản ghi đã được cập nhật
-        return ResponseEntity.ok(Collections.singletonMap("updatedCount", count));
+    public ResponseEntity<?> syncStatus() {
+        try {
+            phieuGiamGiaService.capNhatTrangThaiTuDong();
+            return ResponseEntity.ok(Map.of("message", "Đã đồng bộ trạng thái"));
+        } catch (Exception e) {
+            return ResponseEntity.internalServerError().body(Map.of("message", e.getMessage()));
+        }
     }
-    @GetMapping("/phieu-giam-gia-active")
+
+    // 7. DANH SÁCH ACTIVE (Cho trang bán hàng)
+    @GetMapping("/active")
     public ResponseEntity<List<PhieuGiamGia>> getActiveVouchers() {
-        // Hàm getActive() của bạn đang là findByTrangThai(1)
-        // Hãy đảm bảo logic này là đúng (vd: 1 = Đang hoạt động)
-        List<PhieuGiamGia> activeVouchers = phieuGiamGiaService.getActive();
-        return ResponseEntity.ok(activeVouchers);
+        return ResponseEntity.ok(phieuGiamGiaService.getActive());
     }
 }
